welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:31: error: not found: value length
  c=T((length-1+decalage)%taille) 
       ^Array2:35: error: not found: value length
  recule(length-1)
         ^